--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 </head>
 <body>
     <!-- Slider HTML -->
+  <div class="cslider-container">
     <div id="cslider-wrapper">
         <div class="cslider-slider-container">
             <!-- Navigation Arrows -->
@@ -191,7 +192,8 @@
     </div>
     <div class="cslider">
       <!-- Slideshow content -->
-  </div>
+   </div>
+  </div> 
   <div class="divider"></div>
   
     <script src="script.js"></script> <!-- Link to external JS -->
