Updated project with new features and fixes

--- a/index.html
+++ b/index.html
@@ -382,6 +382,50 @@
  <div class="divider"></div>
  <div class="divider"></div>
 
+ 
+ <div class="container">
+    <!-- Left Side: Button -->
+    <div class="button-container">
+      <button class="view-all-button">View All Designs</button>
+    </div>
+
+    <!-- Right Side: Image Grid -->
+    <div class="grid-container">
+      <!-- 24 images -->
+      <img src="images/pic01.jpg" alt="Design 1">
+      <img src="images/pic02.jpg" alt="Design 2">
+      <img src="images/pic03.jpg" alt="Design 3">
+      <img src="images/pic04.jpg" alt="Design 4">
+      <img src="images/pic05.jpg" alt="Design 5">
+      <img src="images/pic06.jpg" alt="Design 6">
+      <img src="images/pic07.jpg" alt="Design 7">
+      <img src="images/pic08.jpg" alt="Design 8">
+      <img src="images/pic09.jpg" alt="Design 9">
+      <img src="images/pic10.jpg" alt="Design 10">
+      <img src="images/pic11.jpg" alt="Design 11">
+      <img src="images/pic12.jpg" alt="Design 12">
+      <img src="images/pic13.jpg" alt="Design 13">
+      <img src="images/pic14.jpg" alt="Design 14">
+      <img src="images/pic15.jpg" alt="Design 15">
+      <img src="images/pic06.jpg" alt="Design 16">
+      <img src="images/pic07.jpg" alt="Design 17">
+      <img src="images/pic01.jpg" alt="Design 18">
+      <img src="images/pic02.jpg" alt="Design 19">
+      <img src="images/pic03.jpg" alt="Design 20">
+      <img src="images/pic04.jpg" alt="Design 21">
+      <img src="images/pic05.jpg" alt="Design 22">
+      <img src="images/pic08.jpg" alt="Design 23">
+      <img src="images/pic05.jpg" alt="Design 24">
+    </div>
+  </div>
+</div>
+
+  <script src="script.js"></script>
+
+
+<div class="divider"></div>
+<div class="divider"></div>
+
 
    
       <!-- Footer -->
