--- a/index.html
+++ b/index.html
@@ -204,183 +204,199 @@
 
 <div class="harmonized-container">
   <!-- Featured Section -->
-  <div class="featured-section">
-    <h2 class="featured-title">Featured Designs</h2>
-    <button class="view-all-button" onclick="location.href='url-to-all-designs.html'">View All Designs</button>
-  </div>      
-          <section class="tiles">
-            <article class="style1">
-              <span class="image">
-                <img src="images/pic01.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Magna</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style2">
-              <span class="image">
-                <img src="images/pic02.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Lorem</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style3">
-              <span class="image">
-                <img src="images/pic03.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Feugiat</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style4">
-              <span class="image">
-                <img src="images/pic04.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Tempus</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style5">
-              <span class="image">
-                <img src="images/pic05.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Aliquam</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style6">
-              <span class="image">
-                <img src="images/pic06.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Veroeros</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style2">
-              <span class="image">
-                <img src="images/pic07.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Ipsum</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style3">
-              <span class="image">
-                <img src="images/pic08.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Dolor</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style1">
-              <span class="image">
-                <img src="images/pic09.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Nullam</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style5">
-              <span class="image">
-                <img src="images/pic10.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Ultricies</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style6">
-              <span class="image">
-                <img src="images/pic11.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Dictum</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style4">
-              <span class="image">
-                <img src="images/pic12.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Pretium</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor
-                    veroeros et feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-          </section>
- </div>
+  <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
+    <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Designs</h2>
+    <button class="view-all-button" onclick="location.href='url-to-all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
+  </div>
+
+  <!-- Tiles Section -->
+  <section class="tiles" style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
+    <article class="style1">
+      <span class="image">
+        <img src="images/pic01.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Magna</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style2">
+      <span class="image">
+        <img src="images/pic02.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Lorem</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style3">
+      <span class="image">
+        <img src="images/pic03.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Feugiat</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style4">
+      <span class="image">
+        <img src="images/pic04.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Tempus</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style5">
+      <span class="image">
+        <img src="images/pic05.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Aliquam</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style6">
+      <span class="image">
+        <img src="images/pic06.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Veroeros</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style2">
+      <span class="image">
+        <img src="images/pic07.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Ipsum</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style3">
+      <span class="image">
+        <img src="images/pic08.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Dolor</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style1">
+      <span class="image">
+        <img src="images/pic09.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Nullam</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style5">
+      <span class="image">
+        <img src="images/pic10.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Ultricies</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style6">
+      <span class="image">
+        <img src="images/pic11.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Dictum</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+    <article class="style4">
+      <span class="image">
+        <img src="images/pic12.jpg" alt="" />
+      </span>
+      <a href="generic.html">
+        <h2>Pretium</h2>
+        <div class="content">
+          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+        </div>
+      </a>
+    </article>
+  </section>
+
+  <!-- Repositioned "View All" Button -->
+  <div style="display: flex; justify-content: center; margin-top: 20px;">
+    <button class="view-all-button" onclick="location.href='url-to-all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
+  </div>
+</div>
+
  <div class="divider"></div>
  <div class="divider"></div>
+
+ 
+ <div class="container">
+    <!-- Left Side: Button -->
+    <div class="button-container">
+      <button class="view-all-button">View All Designs</button>
+    </div>
+
+    <!-- Right Side: Image Grid -->
+    <div class="grid-container">
+      <!-- 24 images -->
+      <img src="images/pic01.jpg" alt="Design 1">
+      <img src="images/pic02.jpg" alt="Design 2">
+      <img src="images/pic03.jpg" alt="Design 3">
+      <img src="images/pic04.jpg" alt="Design 4">
+      <img src="images/pic05.jpg" alt="Design 5">
+      <img src="images/pic06.jpg" alt="Design 6">
+      <img src="images/pic07.jpg" alt="Design 7">
+      <img src="images/pic08.jpg" alt="Design 8">
+      <img src="images/pic09.jpg" alt="Design 9">
+      <img src="images/pic10.jpg" alt="Design 10">
+      <img src="images/pic11.jpg" alt="Design 11">
+      <img src="images/pic12.jpg" alt="Design 12">
+      <img src="images/pic13.jpg" alt="Design 13">
+      <img src="images/pic14.jpg" alt="Design 14">
+      <img src="images/pic15.jpg" alt="Design 15">
+      <img src="images/pic06.jpg" alt="Design 16">
+      <img src="images/pic07.jpg" alt="Design 17">
+      <img src="images/pic01.jpg" alt="Design 18">
+      <img src="images/pic02.jpg" alt="Design 19">
+      <img src="images/pic03.jpg" alt="Design 20">
+      <img src="images/pic04.jpg" alt="Design 21">
+      <img src="images/pic05.jpg" alt="Design 22">
+      <img src="images/pic08.jpg" alt="Design 23">
+      <img src="images/pic05.jpg" alt="Design 24">
+    </div>
+  </div>
+</div>
+
+  <script src="script.js"></script>
+
+
+<div class="divider"></div>
+<div class="divider"></div>
 
 
    
@@ -476,7 +492,6 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
-
 
 
 
