--- a/index.html
+++ b/index.html
@@ -548,6 +548,78 @@
               </ul>
             </form>
           </section>
+
+    <!-- Sticky Pillola Button Desktop -->
+    <buttond id="carrd2-ml-open-popup-btn">
+      <img src="images/Pillola.webp" alt="Open Form">
+      </buttond>
+  
+      <!-- Popup Form with Video Background -->
+      <div id="carrd2-ml-overlay"></div>
+      <div id="carrd2-ml-popup-form">
+      <button id="carrd2-close-btn">×</button>
+      <video autoplay muted loop playsinline>
+      <source src="images/10OFF desk.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+      <div id="carrd2-ml-form-content-wrapper">
+      <div class="carrd2-form-embedBody">
+      <p class="carrd2-form-message">Dive into the unknown and enjoy a discount on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
+      <form id="carrd2-ml-form" class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1260530/forms/142705894586582257/subscribe" method="post">
+      <div class="carrd2-form-formContent">
+      <input type="email" class="form-control" name="fields[email]" placeholder="Enter your email" required>
+      <div class="carrd2-button-horizontal">
+      <button type="submit" class="primary">Subscribe</button>
+      </div>
+      </div>
+      <input type="hidden" name="ml-submit" value="1">
+      <input type="hidden" name="anticsrf" value="true">
+      </form>
+      <div class="carrd2-form-successBody" style="display: none;">
+      <h4 style="color: white; font-size: 18px;">Thank you!</h4>
+      <p style="color: white;">Check your email and redeem your code!</p>
+      </div>
+      </div>
+      </div>
+      </div>
+
+    <!--Pillola Mobile Only-->
+      <buttonm id="second-ml-open-popup-btn">
+        <img src="images/Pillola.webp" alt="Open Form">
+      </buttonm>
+        <!-- Popup Form with Video Background -->
+      <div id="second-ml-overlay"></div>
+        <div id="second-ml-popup-form">
+          <button id="second-close-btn">×</button>
+            <video autoplay muted loop playsinline>
+           <source src="images/10 OFF short.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        <div id="second-ml-form-content-wrapper">
+        <!-- MailerLite Form Embed -->
+        <div class="second-ml-form-embedBody">
+        <p class="form-message-second">Dive into the unknown and enjoy a discount on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
+        <form id="ml-form-second" class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1260530/forms/142817324078991198/subscribe" method="post">
+        <div class="second-ml-form-formContent">
+        <input type="email" name="fields[email]" placeholder="Enter your email" autocomplete="email" required>
+        <div class="second-ml-button-horizontal">
+        <button type="submit">Subscribe</button>
+        </div>
+        </div>
+        <input type="hidden" name="ml-submit" value="1">
+        <input type="hidden" name="anticsrf" value="true">
+        </form>
+        <div class="second-ml-form-successBody row-success" style="display: none;">
+        <div class="second-ml-form-successContent">
+        <h4 style="color: white; font-size: 18px;">Thank you!</h4>
+        <p style="color: white;">Check your email and redeem your code!</p>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+
+
           <section>
             <h2>Follow</h2>
             <ul class="icons">
