--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
       </video>
       <div id="carrd2-ml-form-content-wrapper">
       <div class="carrd2-form-embedBody">
-      <p class="carrd2-form-message">Dive into the unknown! Enjoy 10% off on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
+      <p class="carrd2-form-message">Dive into the unknown and enjoy a discount on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
       <form id="carrd2-ml-form" class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1260530/forms/142705894586582257/subscribe" method="post">
       <div class="carrd2-form-formContent">
       <input type="email" class="form-control" name="fields[email]" placeholder="Enter your email" required>
@@ -598,7 +598,7 @@
         <div id="second-ml-form-content-wrapper">
         <!-- MailerLite Form Embed -->
         <div class="second-ml-form-embedBody">
-        <p class="form-message-second">Dive into the unknown! Enjoy 10% off on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
+        <p class="form-message-second">Dive into the unknown and enjoy a discount on your initial 4biddenProd purchase. Sign up for exclusive email-only deals.</p>
         <form id="ml-form-second" class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1260530/forms/142817324078991198/subscribe" method="post">
         <div class="second-ml-form-formContent">
         <input type="email" name="fields[email]" placeholder="Enter your email" autocomplete="email" required>
