--- a/index.html
+++ b/index.html
@@ -517,38 +517,90 @@
         <div class="divider"></div>
    
       <!-- Footer -->
-      <footer id="footer">
-        <div class="inner">
-          <section>
-            <!--FORM ATTUALMENTE NON FUNZIONANTE-->
-            <h2>Get in touch</h2>
-            <form id="contact-form" method="post" action="#">
-              <div class="fields">
-                <div class="field half">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="field half">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="field">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                  ></textarea>
-                </div>
-              </div>
-              <ul class="actions">
-                <li><button type="submit" class="primary">Send</button></li>
-              </ul>
-            </form>
-          </section>
+<footer id="footer">
+  <div class="inner">
+    <!-- Existing Contact Form Section -->
+    <section>
+      <h2>Get in touch</h2>
+      <form id="contact-form" method="post" action="#">
+        <div class="fields">
+          <div class="field half">
+            <input type="text" name="name" id="name" placeholder="Name" />
+          </div>
+          <div class="field half">
+            <input type="email" name="email" id="email" placeholder="Email" />
+          </div>
+          <div class="field">
+            <textarea name="message" id="message" placeholder="Message"></textarea>
+          </div>
+        </div>
+        <ul class="actions">
+          <li><button type="submit" class="primary">Send</button></li>
+        </ul>
+      </form>
+    </section>
 
+    <!-- New Policies Section -->
+    <section>
+      <h2>Policies</h2>
+      <ul class="links">
+        <li><a href="#">Payment Policy</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Return & Refund Policy</a></li>
+        <li><a href="#">Shipping Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
+      </ul>
+    </section>
+
+    <!-- New Quick Links Section -->
+    <section>
+      <h2>Quick Links</h2>
+      <ul class="links">
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">4biddenProjects</a></li>
+      </ul>
+    </section>
+
+    <!-- Payment Icons Section -->
+    <section>
+      <h2>We Accept</h2>
+      <ul class="icons payment-icons">
+        <li><i class="fab fa-cc-amazon-pay"></i></li>
+        <li><i class="fab fa-cc-amex"></i></li>
+        <li><i class="fab fa-cc-apple-pay"></i></li>
+        <li><i class="fab fa-cc-diners-club"></i></li>
+        <li><i class="fab fa-cc-discover"></i></li>
+        <li><i class="fab fa-google-pay"></i></li>
+        <li><i class="fab fa-cc-mastercard"></i></li>
+        <li><i class="fab fa-cc-paypal"></i></li>
+        <li><i class="fab fa-shopify"></i></li>
+        <li><i class="fab fa-cc-venmo"></i></li>
+        <li><i class="fab fa-cc-stripe"></i></li>
+      </ul>
+    </section>
+
+    <!-- Existing Social Media Section -->
+    <section>
+      <h2>Follow</h2>
+      <ul class="icons">
+        <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+        <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+        <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="#" class="icon brands style2 fa-tiktok"><span class="label">TikTok</span></a></li>
+        <li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+        <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+        <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+      </ul>
+    </section>
+
+    <!-- Copyright Section -->
+    <ul class="copyright">
+      <li>&copy; 4biddenProd. All rights reserved</li>
+      <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    </ul>
+  
     <!-- Sticky Pillola Button Desktop -->
     <buttond id="carrd2-ml-open-popup-btn">
       <img src="images/Pillola.webp" alt="Open Form">
@@ -618,60 +670,8 @@
         </div>
         </div>
         </div>
-
-
-          <section>
-            <h2>Follow</h2>
-            <ul class="icons">
-              <li>
-                <a href="#" class="icon brands style2 fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-dribbble"
-                  ><span class="label">Dribbble</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-github"
-                  ><span class="label">GitHub</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-500px"
-                  ><span class="label">500px</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon solid style2 fa-phone"
-                  ><span class="label">Phone</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon solid style2 fa-envelope"
-                  ><span class="label">Email</span></a
-                >
-              </li>
-            </ul>
-          </section>
-          <ul class="copyright">
-            <li>&copy; Untitled. All rights reserved</li>
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          </ul>
-        </div>
+      </div>
       </footer>
-    </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
