--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Website</title>
+    <title>4bidden Prod Homepage </title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -43,7 +43,7 @@
       <nav id="menu">
         <h2>Menu</h2>
         <ul>
-            <li><a href="index.html">About Us</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
             <li><a href="#" class="submenu-trigger" data-target="submenu-clothes">4bidden Clothes</a></li>
             <li><a href="generic.html">New Arrivals</a></li>
             <li><a href="elements.html">Contact</a></li>
@@ -132,6 +132,7 @@
         <!--All Designs Subsubmenu -->
         <ul id="subsubmenu-all-designs" class="submenu">
             <li><button class="back-button" data-target="submenu-clothes">Back</button></li>
+            <li><a href="collections">View All Designs</a></li>
             <li><a href="collections">4BiddenProd NADA Limited Edition</a></li>
             <li><a href="collections">Bluebeam IQ Test</a></li>
             <li><a href="collections">Forg3t</a></li>
