--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
         
       </nav>
 
+              <div class="divider"></div>
+
           <!-- Main -->
           <div id="main">
             <div class="inner">
@@ -680,6 +682,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="crisp.js" async></script>
   </body>
 </html>
 
