--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="crisp.js" async></script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="50561097-fb4b-4eea-bd2a-68f5f1bd8c4d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
 </html>
 
