--- a/about-us.html
+++ b/about-us.html
@@ -171,7 +171,8 @@
                   <form id="contact-form" method="POST" data-netlify="true">
                       <!-- Netlify Hidden Fields -->
                       <input type="hidden" name="form-name" value="contact-form" />
-                      <input type="hidden" name="_next" value="/thank-you.html" />
+                      <input type="hidden" name="_next" value="https://4biddenprod.netlify.app/thank-you.html" />
+
           
                       <!-- Form Fields -->
                       <div class="fields">
