--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
+<!--
+  Phantom by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
   <head>
-    <title>4bidden Prod Website</title>
+    <title>4bidden Prod About Us</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
+    <noscript>
+      <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
   </head>
   <body class="is-preload">
+    <!-- Promo Banner -->
+    <div id="promo-banner">
+      <p>🎉 Free delivery on orders over $100! 🎉</p>
+    </div>
     <!-- Wrapper -->
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-
+        <div class="inner">
           <!-- Logo -->
           <a href="index.html" class="logo">
-            <span class="symbol"
-              ><img src="images/new-logo.png" alt="4biddenprod"
-            /></span>
+            <span class="symbol">
+              <img src="images/new-logo.png" alt="4biddenprod" />
+            </span>
           </a>
-      
-          <!-- Nav new-->
+
+          <!-- Nav -->
           <nav>
             <ul>
               <li><a href="#menu">Menu</a></li>
@@ -33,6 +42,9 @@
           </nav>
         </div>
       </header>
+        <!-- Menu Overlay -->
+        <div id="menu-overlay"></div>
+
 
       <!-- Main Menu -->
       <nav id="menu">
@@ -144,8 +156,6 @@
         </ul>  
       </nav>
       <div class="divider"></div>
-      
-
           <!-- Main -->
           <div id="main">
             <div class="inner">
@@ -195,7 +205,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Conflict-Free Slider with Progress Bar and Arrows</title>
-        <link rel="stylesheet" href="main.css"> <!-- Link to external CSS -->
     </head>
     <body>
         <!-- Slider HTML -->
@@ -289,8 +298,6 @@
        </div>
       </div> 
       <div class="divider"></div>
-  
-        <script src="main.js"></script> <!-- Link to external JS -->
     </body>
     </html>
 
@@ -485,8 +492,6 @@
         <img src="images/pic05.jpg" alt="Design 24">
       </div>
     </div>
-
-        <script src="main.js"></script>
 
 
         <div class="divider"></div>
