--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <!--All Designs Subsubmenu -->
         <ul id="subsubmenu-all-designs" class="submenu">
             <li><button class="back-button" data-target="submenu-clothes">Back</button></li>
+            <li><a href="collection-4biddenprod-nada.html">4BiddenProd NADA Limited Edition</a></li>
             <li><a href="design-4biddenprod-nada.html">4BiddenProd NADA Limited Edition</a></li>
             <li><a href="bluebeam-iq-test.html">Bluebeam IQ Test</a></li>
             <li><a href="forg3t.html">Forg3t</a></li>
@@ -307,14 +308,14 @@
       <!-- Featured Section -->
       <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
         <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Designs</h2>
-        <button class="view-all-button" onclick="location.href='url-to-all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
+        <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
       </div>
 
   <!-- Tiles Section -->
   <section class="tiles" style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
     <article class="style1">
       <span class="image">
-        <img src="images/pic01.jpg" alt="" />
+        <img src="images/1 FORG3T SMALL.webp" alt="" />
       </span>
       <a href="generic.html">
         <h2>Magna</h2>
@@ -325,7 +326,7 @@
     </article>
     <article class="style2">
       <span class="image">
-        <img src="images/pic02.jpg" alt="" />
+        <img src="images/1.1 FORG3T LOGO SMALL.webp" alt="" />
       </span>
       <a href="generic.html">
         <h2>Lorem</h2>
@@ -448,7 +449,7 @@
 
       <!-- Repositioned "View All" Button -->
       <div style="display: flex; justify-content: center; margin-top: 20px;">
-        <button class="view-all-button" onclick="location.href='url-to-all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
+        <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
       </div>
     </div>
 
@@ -457,41 +458,8 @@
 
  
      <div class="container">
-      <!-- Left Side: Title and Button -->
-      <div class="button-container">
-        <h1 class="discover-title">Discover All Our Designs and Collections</h1>
-        <button class="view-all-button">View All Designs</button>
+      <div id="image-grid-placeholder"></div>
       </div>
-
-      <!-- Right Side: Image Grid -->
-      <div class="grid-container">
-        <!-- 24 images -->
-        <img src="images/pic01.jpg" alt="Design 1">
-        <img src="images/pic02.jpg" alt="Design 2">
-        <img src="images/pic03.jpg" alt="Design 3">
-        <img src="images/pic04.jpg" alt="Design 4">
-        <img src="images/pic05.jpg" alt="Design 5">
-        <img src="images/pic06.jpg" alt="Design 6">
-        <img src="images/pic07.jpg" alt="Design 7">
-        <img src="images/pic08.jpg" alt="Design 8">
-        <img src="images/pic09.jpg" alt="Design 9">
-        <img src="images/pic10.jpg" alt="Design 10">
-        <img src="images/pic11.jpg" alt="Design 11">
-        <img src="images/pic12.jpg" alt="Design 12">
-        <img src="images/pic13.jpg" alt="Design 13">
-        <img src="images/pic14.jpg" alt="Design 14">
-        <img src="images/pic15.jpg" alt="Design 15">
-        <img src="images/pic06.jpg" alt="Design 16">
-        <img src="images/pic07.jpg" alt="Design 17">
-        <img src="images/pic01.jpg" alt="Design 18">
-        <img src="images/pic02.jpg" alt="Design 19">
-        <img src="images/pic03.jpg" alt="Design 20">
-        <img src="images/pic04.jpg" alt="Design 21">
-        <img src="images/pic05.jpg" alt="Design 22">
-        <img src="images/pic08.jpg" alt="Design 23">
-        <img src="images/pic05.jpg" alt="Design 24">
-      </div>
-    </div>
 
 
         <div class="divider"></div>
@@ -685,6 +653,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="50561097-fb4b-4eea-bd2a-68f5f1bd8c4d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
 </html>
 
